Only use #pragma GCC diagnostic on GCC >= 4.6

https://bugs.freedesktop.org/show_bug.cgi?id=52614

Signed-off-by: David Zeuthen <zeuthen@gmail.com>